# Claude-voice-bridge

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  LICENSE  README.md  projects.yaml  projects.yaml.example  pyproject.toml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-06-30-voice-bridge.md
docs/superpowers/specs/: 2026-06-30-voice-bridge-design.md
hooks/: voice-bridge-notify.py  voice-bridge-reverse-catchup.sh
src/voice_bridge/: __init__.py  approvals.py  attachments.py  bridge.py  catchup.py  config.py  discovery.py  inbox.py  notify_tool.py  routing.py  sanitizer.py  scheduler.py  sessions.py  stt.py  telegram_io.py  telegram_views.py  transcript.py  types.py
src/voice_bridge/tts/: __init__.py  auto_tts.py  openai_tts.py  piper_tts.py  together_tts.py
systemd/: voice-bridge.service
tests/: conftest.py  test_approvals.py  test_attachments.py  test_bridge.py  test_catchup.py  test_config.py  test_discovery.py  test_hook_notify.py  test_inbox.py  test_notify_tool.py  test_routing.py  test_sanitizer.py  test_scheduler.py  test_sessions.py  test_stt.py  test_telegram_io.py  test_telegram_views.py  test_transcript.py  test_tts.py
